[gd_scene load_steps=3 format=2]

[ext_resource path="res://enemies/EnemyBase.tscn" type="PackedScene" id=1]
[ext_resource path="res://enemies/SimpleBoss.gd" type="Script" id=2]

[node name="SimpleBoss" instance=ExtResource( 1 )]
scale = Vector2( 10, 10 )
script = ExtResource( 2 )
MAX_SPEED = 1000
essence_upgrade_amount = 0.005
knockback = 0.0
health = 100.0
screen_shake_intensity = 100
score_value = 150
is_boss = true

[node name="HitBox" parent="." index="2" groups=["boss"]]

[node name="StunTimer" parent="." index="3"]
wait_time = 0.001

[node name="AudioStreamPlayer2D" parent="Indicator" index="2"]
volume_db = 0.0
pitch_scale = 0.5

[node name="SoftCollision" parent="." index="5" groups=["boss"]]

[node name="CollisionShape2D" parent="SoftCollision" index="0"]
one_way_collision_margin = 0.0

[node name="SpecialAttackTimer" type="Timer" parent="." index="6"]
wait_time = 5.0
one_shot = true
autostart = true

[node name="SpecialAttackDuration" type="Timer" parent="." index="7"]
one_shot = true

[connection signal="timeout" from="SpecialAttackTimer" to="." method="_on_SpecialAttackTimer_timeout"]
[connection signal="timeout" from="SpecialAttackDuration" to="." method="_on_SpecialAttackDuration_timeout"]

[editable path="Indicator"]
[editable path="SoftCollision"]
